# arduino-unoq-dynota

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
bridge_loader/: bridge.py  config.toml  logger.py  main.py
sketch_loader/: .proximity_detection.cpp.swp  llext_loader.cpp  llext_loader.h  sketch_loader.ino
